introduce angular github pages deploy code

--- a/angular.json
+++ b/angular.json
@@ -123,8 +123,11 @@
           }
         },
         "deploy": {
-          "builder": "@angular/fire:deploy",
-          "options": {}
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {
+				"baseHref": "/",
+				"cname": "tswaikato.nz"
+			}
         }
       }
     }
