--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -92,6 +93,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -125,9 +127,9 @@
         "deploy": {
           "builder": "angular-cli-ghpages:deploy",
           "options": {
-				"baseHref": "/",
-				"cname": "tswaikato.nz"
-			}
+            "baseHref": "/",
+            "cname": "tswaikato.nz"
+          }
         }
       }
     }
